SERVER-10538 SERVER-11731 change segfault to uassert on improper use of $where